# mom-ai

./: .gitignore  README.md  generate_mom.py  generate_summary.py  pyproject.toml  transcribe.py
